<resources>
    <string name="app_name">MyRoomDemo</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="email">Email</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="add">Add</string>
    <string name="table_records">Table Records</string>
    <string name="no_records_available">No records available!!!</string>
</resources>